--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
+  go_router: ^13.2.0
+  flutter_adaptive_scaffold: ^0.1.8
 
 dev_dependencies:
   flutter_test:
