--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^13.2.0
   flutter_adaptive_scaffold: ^0.1.8
+  uuid: ^4.3.2
+  equatable: ^2.0.5
+  either_dart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
