--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   equatable: ^2.0.5
   either_dart: ^1.0.0
   mockito: ^5.4.4
+  flutter_bloc: ^8.1.4
+  bloc_test: ^9.1.6
 
 dev_dependencies:
   flutter_test:
